common-applications/test-environment/easysoftware-monitoring/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: easysoftware-monitoring
  name: easysoftware-monitoring
