common-applications/test-environment/easysoftware-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easysoftware-monitoring-anitya-service
  namespace: easysoftware-monitoring
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: easysoftware-monitoring
  type: ClusterIP

  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: easysoftware-monitoring-rabbitmq-service
    namespace: easysoftware-monitoring
  spec:
    ports:
      - name: http
        port: 5672
        protocol: TCP
        targetPort: 5672
    selector:
      app: easysoftware-monitoring
    type: ClusterIP
